--- a/public/style.scss
+++ b/public/style.scss
@@ -11,7 +11,7 @@ body{
   width: 100%;
   font-family: 'Oswald', sans-serif;
   font-weight: 300;
-  font-size: 18px;
+  font-size: 16px;
   background: $background;
   line-height: 1.4;
 }
@@ -66,10 +66,11 @@ footer{
   .row{
     padding-left: 10px;
     padding-right: 10px;
-    .right{
-      text-align: right;
-    }
   }
+}
+
+.right{
+  text-align: right;
 }
 
 .main{
@@ -125,11 +126,12 @@ footer{
 
 .card{
   background: white;
-  border-radius: 5px;
+  border-radius: 8px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   height: 480px;
   margin: 10px;
   margin-bottom: 30px;
+  position: relative;
 
 
   &:hover{
@@ -138,7 +140,7 @@ footer{
   }
 
   .food-image{
-    border-radius: 5px 5px 0 0;
+    border-radius: 8px 8px 0 0;
     height: 280px;
     width: auto;
     overflow: hidden;
@@ -155,8 +157,27 @@ footer{
     }
   }
 
-  .description{
+  .info{
     padding: 20px;
+
+    h2{
+      color: #B79733;
+      font-size: 30px;
+      margin-bottom: 20px;
+    }
+
+    .description{
+      margin-bottom: 10px;
+      // flex-grow: 2;
+    }
+
+    .cooking-time{
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+      text-align: right;
+      color: #666;
+    }
   }
 
 }
