--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,11 @@ h1,#main-image{
   font-weight: bold;
 }
 
+#title {
+  font-style: italic;
+  font-weight: bold;
+}
+
 #recipe-header{
   max-width: 500px;
   max-height: 500px;
@@ -21,7 +26,6 @@ h1,#main-image{
   font-style: italic;
   font-weight: bold;
   color: rgba(50,50,50,0.5);
-  text-decoration: underline;
   text-align: center;
 }
 
@@ -39,6 +43,13 @@ h1,#main-image{
   right: 10px;
 }
 
+#splitter {
+  background-color: rgba(100,150,200, 0.5);
+  border-radius: 10px;
+  font-style: italic;
+  font-weight: bold;
+}
+
 #recipes {
   column-count: 2;
   text-align: center;
@@ -52,6 +63,7 @@ h1,#main-image{
 #createdon, #updatedon {
   padding: 0;
   min-height: 20px;
+  font-size: 10px;
 }
 
 li {
@@ -94,9 +106,9 @@ img {
 
 footer {
   position: fixed;
-  bottom: 30px;
+  bottom: 20px;
   width: 100%;
-  height: 3.5rem;
+  height: 4.5rem;
   background-color: rgba(40,44,52,0.5);
   color: white;
 }
