--- a/public/formstyle.css
+++ b/public/formstyle.css
@@ -9,25 +9,17 @@ body {
 	height: 100vh;
 }
 
-div {
-	display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .hidden {
 	display: none;
 }
 
-
 h1 {
 	margin-top: 10%;
+	font-family: 'Lora', serif;
 }
 
 form {
 	margin-top: 10px;
-	width: 30%;
 }
 
 input {
@@ -37,4 +29,12 @@ input {
 
 label {
 	font-size: 20px;
+	font-family: 'Roboto', sans-serif;
+}
+
+.formSize {
+	width: 45%;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%)
 }
