--- a/public/style.scss
+++ b/public/style.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald:300,400,500&display=swap');
 
 $primary: #fbd691;
-$gold: #9D9382;
+$gold: #B79733;
 $light-grey: #e5e6eb;
 $dark-grey: #B0B2B9;
 $background : $light-grey;
