--- a/public/style.scss
+++ b/public/style.scss
@@ -81,6 +81,7 @@ header {
   font-size: 18px;
   font-weight: 400;
   padding: 10px 30px;
+  font-family: 'Oswald', sans-serif;
   background-color: $gold;
   color: white;
   border-radius: 5px;
@@ -357,4 +358,9 @@ label > .label-body {
   p{
     margin-bottom: 5px;
   }
+}
+
+
+.delete-message{
+  margin-top: 30px;
 }
