--- a/public/style1.css
+++ b/public/style1.css
@@ -1,6 +1,7 @@
 body {
 	margin: 0 auto;
 	width: 100%;
+	min-width: 900px;
 	background-color: #2d3135;
 	font-family: 'Work Sans', sans-serif;
 	color: #bed1e4;
@@ -157,7 +158,7 @@ input {
 
 .submit {
 width: 120px;
-margin-left:350px;
+margin-left:  550px;
 }
 
 
@@ -168,7 +169,8 @@ h1 {
 
 .title,.inputImg,.inputIngre,.inputIntr {
 	display:flex;
-	justify-content: space-between;
+	justify-content: space-around;
+	margin:0 20%;
 }
 
  .one, .two, .three, .four {
@@ -177,11 +179,11 @@ h1 {
  }
 
 .title p,.inputImg p,.inputIngre p,.inputIntr p{
-	width: 20 %;
+	width: 20%;
 	padding: 10px;
 	float: left;
-	margin-left: 200px;
+	
 }
 .delete h2 {
-	margin-left:  150px;
+	margin-left: 250px;
 }
