--- a/public/style-ver-2.css
+++ b/public/style-ver-2.css
@@ -211,7 +211,20 @@ input {
 .recipe-input-name {
 	max-width: 100%;
 	width: 100%;
-	font-size: 2em;
+	font-size: 1em;
+	font-weight: 300;
+	padding: 10px;
+	margin-bottom: 10px;
+	margin-left: 0;
+	border: 1px solid #FF7C6F;
+}
+
+.recipe-input-ingredients {
+	text-align: top;
+	max-width: 100%;
+	width: 100%;
+	height: 500px;
+	font-size: 1em;
 	font-weight: 300;
 	padding: 10px;
 	margin-bottom: 10px;
