--- a/views/style.css
+++ b/views/style.css
@@ -1,4 +1,5 @@
 
+
 .container {
     display: flex;
     font-family: 'Lexend Deca', sans-serif;
@@ -7,7 +8,7 @@
 
 footer {
     background-color: turquoise;
-    color: black;    
+    color: red;
     position: bottom;
 
 }
