- Created layout for homepage - created layout for show recipe page - removed some React error warnings

--- a/css/home.css
+++ b/css/home.css
@@ -13,3 +13,39 @@ body {
 h1 {
     color: brown;
 }
+
+.table-striped > tbody > tr:nth-child(2n) > td, .table-striped > tbody > tr:nth-child(2n) > th {
+    background-color: rgba(235, 236, 237);
+    border: none
+ }
+
+ .table-striped > tbody > tr:nth-child(2n) > th {
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+ }
+
+ .table-striped > tbody > tr:nth-child(2n) > td {
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+ }
+
+ .table-striped > tbody > tr:nth-child(2n-1) > td, .table-striped > tbody > tr:nth-child(2n-1) > th {
+    background-color: rgba(255, 255, 255);
+    border: none
+ }
+
+ .table-striped > tbody > tr:nth-child(2n-1) > th {
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+ }
+
+ .table-striped > tbody > tr:nth-child(2n-1) > td {
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+ }
+
+ .btn, .btn-success {
+     background-color: brown;
+     border-color: brown;
+ }
+ 
