--- a/css/home.css
+++ b/css/home.css
@@ -44,7 +44,7 @@ h1 {
     border-bottom-right-radius: 30px;
  }
 
- .btn, .btn-success {
+ .btn-success {
      background-color: brown;
      border-color: brown;
  }
@@ -52,4 +52,9 @@ h1 {
  p {
     max-width: 100%!important;
     white-space: pre-line;
+ }
+
+ .description {
+    border-radius: 20%;
+    padding: 20px 10px;
  }
