--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,6 +31,7 @@ body {
 		display: flex;
 		justify-content: center;
 		width: 100%;
+		height: auto;
 		background-color: white;
 }
 
@@ -46,9 +47,10 @@ body {
 
 .nav {
 		width: 100%;
-		height: 30%;
+		height: auto;
 		display: flex;
 		flex-wrap: wrap;
+		flex-direction: column;
 		justify-content: space-around;
 		align-items: center;
 		background-color: #ed8a63;
@@ -60,7 +62,6 @@ body {
 		text-align: center;
 		padding: 20px 0;
 		font-weight: 500;
-		margin: 0 12px;
 		font-size: 1.1rem;
 		letter-spacing: 0.1rem;
 		color: #3a4660;
@@ -70,6 +71,92 @@ body {
 		color: white;
 		transition: all .2s linear;
 }
+
+/*index*/
+
+.landing-page {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		width: 100%;
+		height: 100%;
+		min-height: 60vh;
+}
+
+.sort-form {
+
+		margin: 12px 0;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		color: #3a4660;
+}
+
+.sort-form__label {
+		font-size: 1.2rem;
+		font-weight: 700;
+		margin: 12px 0;
+}
+
+.sort-form__selector {
+		margin: 12px 0;
+		width: 60%;
+		height: 45px;
+		color: #3a4660;
+		font-size: 1rem;
+		border: 1px solid #3a4660;
+		text-align: center;
+		outline: none;
+}
+
+.sort-form__btn {
+		cursor: pointer;
+		border-radius: 0px;
+		text-decoration: none;
+		margin: 12px 0;
+		padding: 16px 24px;
+		font-size: 12px;
+		line-height: 19px;
+		min-width: 200px;
+		text-transform: uppercase;
+		font-family: 'Montserrat', sans-serif;
+		font-weight: 400;
+		letter-spacing: 3px;
+		border: solid 2px #3a4660;
+		background: transparent;
+		color: #3a4660;
+		-webkit-transition: all .1s linear;
+		-moz-transition: all .1s linear;
+		-ms-transition: all .1s linear;
+		-o-transition: all .1s linear;
+		transition: all .1s linear;
+		outline: none;
+		box-sizing: border-box;
+}
+
+.sort-form__btn:hover {
+		background-color: #3a4660;
+		color: white;
+		border-radius: 30px;
+		transition: all .4s ease-out;
+		-webkit-transition: all .4s ease-out;
+		-moz-transition: all .4s ease-out;
+		-ms-transition: all .4s ease-out;
+		-o-transition: all .4s ease-out;
+}
+
+.sort-form__btn:active {
+		background-color: #3a4660;
+		color: lightgrey;
+		transition: all .1s linear;
+		-webkit-transition: all .1s linear;
+		-moz-transition: all .1s linear;
+		-ms-transition: all .1s linear;
+		-o-transition: all .1s linear;
+}
+
+/*recipes*/
 
 .recipes-list {
 		display: flex;
@@ -244,12 +331,6 @@ body {
 		letter-spacing: 0.02rem;
 }
 
-.landing-page {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		height: 100%;
-}
 
 .landing-page>h2 {
 		width: 100%;
