--- a/public/css/main.css
+++ b/public/css/main.css
@@ -102,6 +102,7 @@ body {
 .sort-form__selector {
 		margin: 12px 0;
 		width: 60%;
+		max-width: 500px;
 		height: 45px;
 		color: #3a4660;
 		font-size: 1rem;
@@ -162,6 +163,8 @@ body {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-around;
+		width: 100%;
+		height: 100%;
 }
 
 .recipes-list__entry {
@@ -169,19 +172,23 @@ body {
 		flex-direction: column;
 		align-items: center;
 		box-sizing: border;
+		width: 100%;
+		height: 100%;
 }
 
 .recipes-list__entry-img-wrapper {
 		width: 100%;
-		height: 80%;
-		max-width: 600px;
-		max-height: 290px;
+		height: 30%;
+		/*		height: 30%;*/
+		min-height: 200px;
+		max-height: 450px;
 		display: flex;
+		background-color: white;
 }
 
 .recipes-list__entry-img {
 		width: 100%;
-		height: auto;
+		min-height: 200px;
 		object-fit: cover;
 }
 
@@ -190,7 +197,7 @@ body {
 		align-items: center;
 		justify-content: center;
 		width: 100%;
-		height: 25%;
+		min-height: 80px;
 		background-color: #3a4660;
 }
 
@@ -379,4 +386,12 @@ body {
 .ingredient__links>a:hover {
 		color: #ed8a63;
 		letter-spacing: 0.01rem;
+}
+
+/**/
+
+.landing-page>h1 {
+		width: auto;
+		text-align: center;
+		color: #3a4660;
 }
