updated styles and logic for ingredients list (remove duplicate ingredients)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -368,7 +368,9 @@ body {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		padding: 8px 0;
 		width: 100%;
+		border-bottom: 1px dashed #ed8a63;
 }
 
 .ingredient__links {
@@ -381,6 +383,7 @@ body {
 
 .ingredient__links>a {
 		text-decoration: none;
+		margin: 8px 0;
 }
 
 .ingredient__links>a:hover {
