--- a/public/styles/base.scss
+++ b/public/styles/base.scss
@@ -1,19 +1,11 @@
 @charset "utf-8";
 @import "~bulma/bulma";
-.container {
-  padding-top: 48px;
-  padding-left: 50px;
+
+img.site-logo {
+  display: inline-block;
 }
 
 .site-title {
   font-weight: bolder;
   margin-left: 5px;
-}
-
-#nav-toggle-state {
-  display: none;
-}
-
-#nav-toggle-state:checked ~ .navbar-menu {
-  display: block;
 }
